 * Language and i18n:
   * Updated translations: Czech, French, German, Greek, Hungarian, Italian,
     Lithuanian, Scottish Gaelic, Slovak
 * Lua API:
   * Fix bug #21761: wesnoth.synchronize_choice will now give a warning when
     the table returned by the user-specified function is not completely valid,
     when wesnoth is running in debug mode (--debug command line flag).
 * Units:
   * Increased the experience requirement for the Rami from 32 to 39
   * Increased the experience requirement for the Saree from 56 to 64
   * Changed sound timings for Khalifate melee attacks
   * New chill tempest animation for Lich/Ancient Lich
   * Add 'elemental' trait to mudcrawler line
   * Fix sound timings for drake fire animation macros
 * User interface:
   * Classic Theme which restores the 1.10 UI. 
   * Made orb and minmap colors configurable by the game preferences.
   * Remove 'allow_new_game=no' entries from random map new game list
 * WML engine:
   * Added customizable recall costs for unit types and individual units,
     using the new recall_cost attribute in [unit_type] and [unit].
   * Added support for [elseif] tags inside [if]
 * Miscellaneous and bug fixes:
   * Fix Fisher-Yates implemenation of Lua helper.shuffle (bug #21706)
   * Fixed issues with the ~BG() image path function not always working with
     cached images.
   * Idle controlled sides now serialize as human controlled.
   * Fixed bug #20876: A segfault in cut_surface.
   * Changed: Dropped support for AmigaOS, BeOS, and OS/2.
   * Increased the sound mixer channel allocation from 16 to 32, thereby
     raising the limit for simultaneous sound effects from 5 to 21.
   * Fix bug #21758: "Ready not blocked while player pick faction."
   * Fix bug #18829: "ai sides show up as "controller=network" on remote
     clients". This issue is the source of some difficulties with mp campaigns
     which occur when the campaign is reloaded from a non-host side, or after a