@@ -40,6 +40,8 @@ Version 1.13.0-dev:
    * Fix bug #21761: wesnoth.synchronize_choice will now give a warning when
      the table returned by the user-specified function is not completely valid,
      when wesnoth is running in debug mode (--debug command line flag).
+ * Graphics:
+   * Smooth unit movement over terrain with elevation (e.g. keeps/bridges)
  * Units:
    * Increased the experience requirement for the Rami from 32 to 39
    * Increased the experience requirement for the Saree from 56 to 64
